syntax = "proto3";
package pluginextensionv2;

option go_package = ".;pluginextensionv2";

message SanitizeRequest {
  string filename = 1;
  bytes content = 2;
  string configType = 3; // DOMPurify, ...
  bytes config = 4;
}

message SanitizeResponse {
  string error = 1;
  bytes sanitized = 2;
}

service Sanitizer {
  rpc Sanitize(SanitizeRequest) returns (SanitizeResponse);
}
